feat(user): add new endpoint to logout user - this endpoint only delete httponly cookie. Does not blacklist user's cookies
